--- a/Q1/Q1.html
+++ b/Q1/Q1.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doanh số bán hàng theo Mặt hàng</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sales Revenue by Product Category</title>
+  <link rel="stylesheet" href="Q1.css">
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <h2>Doanh số bán hàng theo Mặt hàng</h2>
-    <svg width="600" height="400"></svg>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="script.js"></script>
+  <div class="container">
+    <div class="chart-container">
+      <svg id="bar-chart"></svg>
+    </div>
+  </div>
+  <script src="Q1.js"></script>
 </body>
 </html>
