--- a/Q7/Q7.html
+++ b/Q7/Q7.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xác suất bán hàng theo Nhóm hàng</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sales Probability by Product Group</title>
+  <link rel="stylesheet" href="Q7.css">
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-    <h2>Xác suất bán hàng theo Nhóm hàng</h2>
-    <svg width="500" height="500"></svg>
-    <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="script.js"></script>
+  <div class="container">
+    <div class="chart-container">
+      <svg id="bar-chart"></svg>
+    </div>
+  </div>
+  <script src="Q7.js"></script>
 </body>
 </html>
