--- a/Q12/Q12.html
+++ b/Q12/Q12.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doanh số bán hàng theo Tháng</title>
-    <link rel="stylesheet" href="q3.css">
+    <title>Phân phối Mức chi trả của Khách hàng</title>
+    <link rel="stylesheet" href="q12.css">
 </head>
 <body>
     <div class="chart-container">
-        <h2>Doanh số bán hàng theo Tháng</h2>
-        <canvas id="q3Chart"></canvas>
+        <h2>Phân phối Mức chi trả của Khách hàng</h2>
+        <canvas id="q12Chart"></canvas>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="q3.js"></script>
+    <script src="q12.js"></script>
 </body>
 </html>
