--- a/Q4/Q4.html
+++ b/Q4/Q4.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Average Daily Sales by Day of Week</title>
-  <link rel="stylesheet" href="Q4.css">
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doanh số bán hàng trung bình theo Ngày trong tuần</title>
+    <link rel="stylesheet" href="q4.css">
 </head>
 <body>
-  <div class="container">
     <div class="chart-container">
-      <svg id="bar-chart"></svg>
+        <h2>Doanh số bán hàng trung bình theo Ngày trong tuần</h2>
+        <canvas id="q4Chart"></canvas>
     </div>
-  </div>
-  <script src="Q4.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="q4.js"></script>
 </body>
 </html>
