--- a/Q5/Q5.html
+++ b/Q5/Q5.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Average Daily Sales by Day of Month</title>
-  <link rel="stylesheet" href="Q5.css">
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doanh số bán hàng trung bình theo Ngày trong tháng</title>
+    <link rel="stylesheet" href="q5.css">
 </head>
 <body>
-  <div class="container">
     <div class="chart-container">
-      <svg id="bar-chart"></svg>
+        <h2>Doanh số bán hàng trung bình theo Ngày trong tháng</h2>
+        <canvas id="q5Chart"></canvas>
     </div>
-  </div>
-  <script src="Q5.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="q5.js"></script>
 </body>
 </html>
