--- a/Q6/Q6.html
+++ b/Q6/Q6.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Average Sales by Time Period</title>
-  <link rel="stylesheet" href="Q6.css">
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doanh số bán hàng trung bình theo Khung giờ</title>
+    <link rel="stylesheet" href="q6.css">
 </head>
 <body>
-  <div class="container">
     <div class="chart-container">
-      <svg id="bar-chart"></svg>
+        <h2>Doanh số bán hàng trung bình theo Khung giờ</h2>
+        <canvas id="q6Chart"></canvas>
     </div>
-  </div>
-  <script src="Q6.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="q6.js"></script>
 </body>
 </html>
