--- a/Q2/Q2.html
+++ b/Q2/Q2.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sales Revenue by Product Group</title>
-  <link rel="stylesheet" href="Q2.css">
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doanh số bán hàng theo Nhóm hàng</title>
+    <link rel="stylesheet" href="q2.css">
 </head>
 <body>
-  <div class="container">
     <div class="chart-container">
-      <svg id="bar-chart"></svg>
+        <h2>Doanh số bán hàng theo Nhóm hàng</h2>
+        <canvas id="q2Chart"></canvas>
     </div>
-  </div>
-  <script src="Q2.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="q2.js"></script>
 </body>
 </html>
