--- a/Q7/Q7.html
+++ b/Q7/Q7.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sales Probability by Product Group</title>
-  <link rel="stylesheet" href="Q7.css">
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Xác suất bán hàng theo Nhóm hàng</title>
+    <link rel="stylesheet" href="q7.css">
 </head>
 <body>
-  <div class="container">
     <div class="chart-container">
-      <svg id="bar-chart"></svg>
+        <h2>Xác suất bán hàng theo Nhóm hàng</h2>
+        <canvas id="q7Chart"></canvas>
     </div>
-  </div>
-  <script src="Q7.js"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="q7.js"></script>
 </body>
 </html>
