--- a/Q8/Q8.html
+++ b/Q8/Q8.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doanh số bán hàng theo Tháng</title>
-    <link rel="stylesheet" href="q3.css">
+    <title>Xác suất bán hàng của Nhóm hàng theo Tháng</title>
+    <link rel="stylesheet" href="q8.css">
 </head>
 <body>
     <div class="chart-container">
-        <h2>Doanh số bán hàng theo Tháng</h2>
-        <canvas id="q3Chart"></canvas>
+        <h2>Xác suất bán hàng của Nhóm hàng theo Tháng</h2>
+        <canvas id="q8Chart"></canvas>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="q3.js"></script>
+    <script src="q8.js"></script>
 </body>
 </html>
